--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,25 @@
 .App > div {
     margin-right: 50px;
 }
+
+.task {
+    color: #000;
+    font-weight: 550;
+}
+
+.isDone {
+    text-decoration: line-through;
+    color: #888;
+    font-weight: 450;
+}
+
+.active {
+    background-color: #f0f;
+    font-weight: bold;
+    color: white;
+}
+
+.error {
+    border: 2px solid red;
+    outline: none
+}
